--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,20 @@
 @import "tailwindcss/utilities";
 
 @import "../tailwind/components.css";
-
+@layer base {
+  :root {
+    --color-primary: theme("colors.primary");
+    --color-secondary: theme("colors.secondary");
+    --color-accent: theme("colors.accent");
+    --color-neutral: theme("colors.neutral");
+    --color-info: theme("colors.info");
+    --color-success: theme("colors.success");
+    --color-warning: theme("colors.warning");
+    --color-error: theme("colors.error");
+    --color-gradient-first: theme("colors.gradient-first");
+    --color-gradient-second: theme("colors.gradient-second");
+  }
+}
 html {
   font-family: var(--font-yekanweb);
 }
